<resources>
    <string name="app_name">Ethereal</string>
    <string name="quote">"It's okay to be less than perfect."</string>
    <string name="actidesc">"Things you can do to boost your mental state are referred to as mental health activities. Collaborating in mental health activities can improve your overall health, well-being and as well as your sense of inner peace."</string>
    <string name="mediactidesc">"If stress has you anxious, tense and worried, consider trying meditation. Spending even a few minutes in meditation can restore your calm and inner peace."</string>
    <string name="healthactisdesc">Mental health is vital to overall personal wellness. It\'s our emotional psychological and social well-being. Here are some health courses that can help to improve your overall psychological well-being.</string>
    <string name="forgotdesc">"We will send an email to your registered ID with \ninstructions to reset your password."</string>
    <string name="therapistquote">"The role of the therapist is to reflect the being/accepting self\n that was never allowed to be in the borderline."\n― Michael Adzema."</string>
    <string name="i_already"><u>I already have an account</u></string>
    <string name="crisis">Are you in crisis?</string>
    <string name="panictext">You are not alone. Help is just a\ncall away.</string>
    <string name="panicdesc">If you are dealing with abuse, trauma or crisis, Ethereal is not enough. It is important that you talk to a person you feel safe sharing what you are dealing with. If there is no one, call one of the helplines below. Things will get better.</string>
    <string name="health_points">Based on your overall health test,\npoints you have secured is 84.</string>
    <string name="welcomedesc1">Get help with common mental health\nproblems such as stress, anxiety, depression\nand panic attacks. In a safer space.</string>
    <string name="welcomedesc2">Discover and plan the activities that you find\nmost useful. We will remind you beforehand\nand help you self-reflect afterwards.</string>
    <string name="welcomedesc3">Stay motivated by logging your mood, stress,\nmindfulness or sleep seeing these changes\nover time.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currenttime">0:00</string>
    <string name="totaltime">0:00</string>
    <string name="course1day1">With today\'s tumultuous and uncharted climate, a certain amount of worry and anxiety are normal. While we use these terms interchangeably, they are entirely different animals — and they have different implications for health and well-being.
\n\nIf people aren\'t a little bit worried right now, that\'s a problem, says Jeffrey Devore, MSW, a behavioral health social worker at Henry Ford Health. Worry and anxiety fall on a spectrum. They\'re different states, but they\'re also interrelated.
    \n\n<b>Worry Versus Anxiety</b>
        \n\nChances are good that you regularly experience some level of worry (or even anxiety). But what do these terms really mean? Both states are marked by a sense of concern, disquiet and possibly stress. But they\'re not the same.
        \n\nHere are five key differences between worry and anxiety:
        \n\n<b>Worry tends to reside in our minds.\nAnxiety affects both body and mind.</b>
\n\nEveryday worries take place in your thoughts, while anxiety often manifests physically in the body, Devore explains. You might feel faint or lightheaded. Some people even hyperventilate. People who are anxious are also more likely to suffer from digestive problems like nausea, indigestion and irritable bowel syndrome.
   \n\n<b>Worry is specific.\nAnxiety is more generalized.</b>
    \n\nWhether you\'re fixating on your odds of contracting the coronavirus or trying to figure out how you\'ll be able to homeschool three children, worry is distinct and concrete. Anxiety is generally vague. You feel unsettled, but you can\'t pinpoint what you\'re really anxious about — and that can make problem-solving difficult.
    \n\n<b>Worry is grounded in reality.\nAnxiety is marked by catastrophic thinking.</b>
    \n\nThere\'s a logical component to worry. Your brain is trying to make sense of a real and present danger. Worrying when your fears are actionable makes sense. It\’s worry that can lead you to take coronavirus precautions, like washing your hands and wearing a mask. Anxiety, on the other hand, overestimates risk. So if the real risk of a negative outcome is 10%, someone who is anxious may perceive the risk closer to 70%, Devore explains. To make matters worse, people who are suffering from anxiety may underestimate their ability to cope with a negative outcome.
    \n\n<b>Worry is temporary.\nAnxiety is longstanding.</b>
    \n\nWorry is usually short term. There\'s a concerning situation (like COVID-19) and you worry about it. Worry prods you to use problem-solving skills to address your concerns. Anxiety is persistent, even when concerns are unrealistic. It often compromises your ability to function.
    \n\n<b>Worry doesn\'t impair function.\nAnxiety does.</b>
    \n\nYou probably won\'t be forced to take a sick day due to worries about finances or weight gain. Anxiety, however, seeps into your psyche and can make it difficult to focus and get stuff done.
        \n\nWorry and anxiety are not all bad. In fact, they can motivate change, Devore says. The key is using problem-solving skills to address what you\'re worried about and reduce the risk of your fears being realized.
    </string>
    <string name="course1day2">All anxiety disorders, including panic disorder, involve some degree of anxiety and nervousness. Anxiety is an inner state that includes feelings of dread, worry, fear, stress, and apprehension. For people with panic disorder, the impact of anxiety is typically experienced on mental, emotional, and even physical levels.
    \n\nA particularly unpleasant experience of anxiety-related physical sensations can come in the form of a panic attack, the main symptom of panic disorder. These attacks are characterized by distressing physical feelings, such as chest pain, accelerated heart rate, shaking, trembling, and shortness of breath.
    \n\nAnxiety can become such a regular part of your life that you may not even notice how it is physically affecting you. For example, anxiety tends to increase bodily tension, leading to tightness in specific areas, such as the back, neck, and shoulders.
    \n\nOn the other hand, you may be well aware of how panic and anxiety are putting strains on your body, but are struggling to cope with the physical symptoms of panic disorder. Luckily, there are some steps you can take to manage your difficult somatic symptoms. Listed below are ways you can manage the physical symptoms of panic and anxiety:
    \n\n<b>Change Your Mind</b>
    \n\nPart of the fear and discomfort associated with the physical symptoms of panic disorder is caused by one\’s thoughts. For example, when feeling anxiety-related symptoms of excessive sweating, trembling, or choking sensations, people may become fearful that they will lose control or that others are judging their reactions.
    \n\nDuring a panic attack, a person may feel afraid of the consequences of the physical symptoms, fearing that it will lead to a medical emergency. Such fears only heighten this sense of anxiety, possibly causing more intense panic and anxiety.
    \n\nOne way to more effectively deal with your physical symptoms is to work on the way you are responding to them. Some things you can do include:
    \n\n<b>Self-reflection</b> such as journaling or mood and anxiety tracking, which can help you in exploring your automatic reactions to your symptoms and determine ways to change them.
    \n\n<b>Affirmations</b> are another way you can work towards shifting your thoughts.
    \n\n<b>Take Care of Yourself Physically</b>
    \n\nStudies have shown that nutrition and exercise can impact your experience with panic disorder symptoms. To better manage the physical symptoms of panic and anxiety, consider making some healthy lifestyle changes.
    \n\n<b>Avoid certain foods or drinks</b> that may trigger or worsen anxiety. For instance, an overabundance of certain foods and substances, including caffeine and sugar, can aggravate feelings of anxiety.
    \n\n<b>Physical exercise</b> can help relieve stress and tension felt throughout the body, increase energy levels, and improve mood.
    \n\n<b>Stress-reducing relaxation exercises</b> such as yoga and meditation can help you learn how to control your body sensations and remain calm in the face of anxiety.
    \n\n<b>Bring Your Awareness Elsewhere</b>
    \n\nWhen physical symptoms become overwhelming, it can help to adjust your focus to more pleasant activities. When anxious physical sensations are on the rise, try to redirect your attention to something else. Think about what activities you enjoy and could quickly change your focus.
    \n\nRegardless of what activities you choose, the point is to channel your excess energy into something that you find fun and soothing.
    \n\n<b>Seek Treatment</b>
    \n\nIf you are experiencing the physical symptoms of panic disorder, panic attacks, and anxiety, it is important to seek help. A physician or qualified mental health specialist will be able to assist you in coping with your physical symptoms.
    \n\nTreatment will involve getting the right diagnosis, participating in a treatment plan, and following-up with your doctor\’s recommendations. By getting the help you need, you can anticipate learning how to effectively manage the physical symptoms of panic and anxiety.</string>
    <string name="course1day3"><b>Start Challenging Your Worries</b>
    \n\nWriting your thoughts down on paper can have a dramatic impact because it allows you to see what you are actually thinking about. It can give you a realization that most of your thoughts seem extreme and unlikely to happen.
    \n\nThere are 5 steps to challenge your worries:
    \n\n<b>1. Build Awareness</b>
    \n\n<b>2. Write Down Your Thoughts</b>
    \n\n<b>3. Identify Thinking Style</b>
    \n\n<b>4. Challenege Your Thoughts</b>
    \n\n<b>5. Brainstorm Solutions</b></string>
    <string name="course1day4"><b>Positive Beliefs About Worrying</b>
    \n\n1. It motivates me to do things and solve problems.
    \n\n2. It helps me cope with negative feelings by preparing for the worst in advance.
    \n\n3. It stops bad things from happening.
    \n\n4. It shows I care.
    \n\n<b>Negative Beliefs About Worrying</b>
    \n\n1. I have no control over my worry.
    \n\n2. Worry will make me lose my mind.
    \n\n3. It will never stop, worry controls me.
    \n\n4. I can\'t focus on anything my (current) worry.</string>
</resources>