<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="Fragments.ActivitiesFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/activitiesback"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/pale_grey"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/back"
            android:backgroundTint="@color/grey"
            android:layout_gravity="center"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_height="230dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/white"
            app:scrimAnimationDuration="500"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            android:id="@+id/collapsing_toolbar">

            <ImageView
                android:id="@+id/activitiesimg"
                android:layout_width="250dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                app:layout_collapseMode="parallax"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_activities"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar"
        android:layout_marginBottom="-40dp"
        app:cardBackgroundColor="@color/white"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:cardElevation="10dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:background="@drawable/scroll_bg_top">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Activities"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:textSize="20dp"
                            android:textColor="@color/grey"
                            android:fontFamily="@font/lato_bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/actidesc"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:textSize="12dp"
                            android:layout_marginBottom="20dp"
                            android:textColor="@color/grey"
                            android:fontFamily="@font/lato"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@color/pale_yellow">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Meditation Chants"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:textSize="16dp"
                            android:textColor="@color/grey"
                            android:fontFamily="@font/lato_bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mediactidesc"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:textSize="12dp"
                            android:textColor="@color/grey"
                            android:fontFamily="@font/lato"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/meditationrv"
                            android:paddingStart="30dp"
                            android:overScrollMode="never"
                            android:paddingTop="30dp"
                            android:background="@drawable/scroll_bg_full"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@color/pale_green">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Health Courses"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:textSize="16dp"
                                android:textColor="@color/grey"
                                android:fontFamily="@font/lato_bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/healthactisdesc"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:textSize="12dp"
                            android:textColor="@color/grey"
                            android:fontFamily="@font/lato"/>


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/healthcourserv"
                            android:background="@drawable/scroll_bg_full"
                            android:backgroundTint="@color/pale_green"
                            android:layout_marginBottom="30dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="30dp"
                            android:overScrollMode="never"
                            android:paddingTop="30dp"/>

                        </LinearLayout>

                    </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </com.google.android.material.card.MaterialCardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>